--- a/Zhemanov_Alexandr_dz_8/style.css
+++ b/Zhemanov_Alexandr_dz_8/style.css
@@ -1,4 +1,4 @@
-//@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
 body {
     margin: 0;
     font-family: Lato, sans-serif;
@@ -58,6 +58,7 @@ body {
 
 .cartIconWrap {
     position: relative;
+    cursor: pointer;
 }
 
 .cartIconWrap span {
